Fix menu spacing (#5)

--- a/src/styles/components/PageLayout/Header.module.scss
+++ b/src/styles/components/PageLayout/Header.module.scss
@@ -38,7 +38,7 @@
           font-size: 50px;
           position: absolute;
           top: -15px;
-          right: -9px;
+          right: -7px;
         }
         &:after {
           content: " ";
